<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".models.MainSignUpActivity">

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/sign_in_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="poppins"
        android:textColor="@color/accentsFirst" />

    <TextView
        android:id="@+id/signInDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="poppins"
        android:gravity="center"
        android:text="@string/sign_in_description"
        android:textColor="@color/accentsSecond"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_stroke_color"
        android:drawableStart="@drawable/baseline_drawable_user"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="poppins"
        android:hint="@string/sign_in_user"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textAlignment="textStart"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_stroke_color"
        android:drawableStart="@drawable/baseline_drawable_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="poppins"
        android:hint="@string/sign_in_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textAlignment="textStart"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient_color"
        android:fontFamily="poppins"
        android:text="@string/sign_in_button"
        android:textColor="@color/accentsThrid"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/other_access"
        app:layout_constraintBottom_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white_color"
        android:fontFamily="poppins"
        android:text="@string/sign_button_google"
        android:textColor="@color/accentsFirst"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>