<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryFirst">

    <ImageView
        android:id="@+id/backgroundWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_welcome" />

    <ImageView
        android:id="@+id/imageWelcome"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundWelcome"
        app:srcCompat="@drawable/customer_automobile_saloon" />

    <TextView
        android:id="@+id/welcomeTitleFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/welcome_title_first"
        android:textAllCaps="true"
        android:textColor="@color/accentsThrid"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageWelcome" />

    <TextView
        android:id="@+id/welcomeTitleSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/welcome_title_second"
        android:textAllCaps="true"
        android:textColor="@color/accentsFirst"
        android:textSize="35dp"
        app:layout_constraintStart_toEndOf="@+id/welcomeTitleFirst"
        app:layout_constraintTop_toTopOf="@+id/welcomeTitleFirst" />

    <TextView
        android:id="@+id/welcomeTitleThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/welcome_title_third"
        android:textAllCaps="true"
        android:textColor="@color/accentsFirst"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="@+id/welcomeTitleFirst"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitleFirst" />

    <TextView
        android:id="@+id/welcomeTitleFourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/welcome_title_fourth"
        android:textAllCaps="true"
        android:textColor="@color/accentsThrid"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="@+id/welcomeTitleThird"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitleThird" />

    <TextView
        android:id="@+id/welcomeSubtitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/accentsThrid"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonWelcome"
        app:layout_constraintStart_toStartOf="@+id/welcomeTitleFourth" />

    <Button
        android:id="@+id/buttonWelcome"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_black_color"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/welcome_button"
        android:textAllCaps="false"
        android:textColor="@color/accentsThrid"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>