<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationSignIn"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginTop="-100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/orange_car" />

        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-75dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/sign_in_title"
            android:textColor="@color/accentsFirst"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationSignIn" />

        <TextView
            android:id="@+id/signInDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/sign_in_description"
            android:textColor="@color/accentsSecond"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInTitle" />

        <EditText
            android:id="@+id/userSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_stroke_color"
            android:drawableStart="@drawable/baseline_drawable_user"
            android:drawablePadding="12dp"
            android:inputType="text"
            android:ems="10"
            android:textSize="15sp"
            android:paddingStart="8dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/sign_in_user"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationSignIn" />

        <EditText
            android:id="@+id/passwordSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_stroke_color"
            android:drawableStart="@drawable/baseline_drawable_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/sign_in_password"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:textAlignment="textStart"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userSignIn" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/button_gradient_color"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_in_button"
            android:textAllCaps="false"
            android:textColor="@color/accentsThrid"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignIn" />

        <TextView
            android:id="@+id/otherAccessSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/other_access"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <Button
            android:id="@+id/buttonSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/button_white_color"
            android:drawableStart="@drawable/google"
            android:fontFamily="@font/poppins_bold"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/sign_button_google"
            android:textAllCaps="false"
            android:textColor="@color/accentsFirst"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otherAccessSignIn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignInGoogle">

            <TextView
                android:id="@+id/signInNoHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_in_no_have_account" />

            <TextView
                android:id="@+id/signInRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_in_register"
                android:textColor="@color/primaryFirst" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>